2010-05-23  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Hide prepare and post commands for webkit-patch
        https://bugs.webkit.org/show_bug.cgi?id=39539

        It turns out these commands aren't very popular and they confuse new
        users.  They'll still be there for advanced users, however.

        * Scripts/webkitpy/tool/commands/upload.py:

2010-05-23  Jesus Sanchez-Palencia  <jesus@webkit.org>

        Reviewed by Laszlo Gombos.

        [Qt] QtTestBrowser has two graphicsview options that aren't enabled correctly
        https://bugs.webkit.org/show_bug.cgi?id=39491

        Making toggleResizesToContents and toggleTiledBackingStore checkable when
        QtTestBrowser is started on graphics view mode.

        * QtTestBrowser/main.cpp:
        (LauncherWindow::createChrome):

2010-05-23  Jesus Sanchez-Palencia  <jesus@webkit.org>

        Reviewed by Laszlo Gombos.

        [Qt] QtTestBrowser is still called QtLauncher in the code
        https://bugs.webkit.org/show_bug.cgi?id=39488

        Finish the name change of QtLauncher to QtTestBrowser.

        * QtTestBrowser/main.cpp:
        (LauncherApplication::LauncherApplication):
        (LauncherApplication::handleUserOptions):
        * QtTestBrowser/mainwindow.cpp:
        (MainWindow::MainWindow):
        * QtTestBrowser/useragentlist.txt:

2010-05-23  Marcus Bulach  <bulach@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] Adds Geolocation support to DumpRenderTree.
        https://bugs.webkit.org/show_bug.cgi?id=39440

        Existing LayoutTests/fast/dom/Geolocation/* should pass.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::setGeolocationPermission):
        (LayoutTestController::setMockGeolocationPosition):
        (LayoutTestController::setMockGeolocationError):
        * DumpRenderTree/chromium/LayoutTestController.h: