@@ -2,6 +2,17 @@
 
         Reviewed by Eric Seidel.
 
+        webkit-patch should assign newly created bugs to their creator
+        https://bugs.webkit.org/show_bug.cgi?id=39548
+
+        As requested on webkit-dev.
+
+        * Scripts/webkitpy/common/net/bugzilla.py:
+
+2010-05-23  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         Hide prepare and post commands for webkit-patch
         https://bugs.webkit.org/show_bug.cgi?id=39539
 
